--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "mongoose": "^5.11.16",
-    "nodemon": "^1.14.3",
+    "nodemon": "^1.19.4",
     "socket.io": "^2.0.4"
   }
 }
